status and contact

--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,7 @@ KEY = "car"
 DB_URL = "mongodb://0.0.0.0:27017/test"
 password = "xxnf hngs ecch eaek"
 email = "carrent504@gmail.com"
+
+# for sending mail to the admin
+CONTACT_EMAIL = "nepalsumit30@gmail.com"
+CONTACT_PASSWORD = "xlld ehxs gwow aipg"
