--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 PORT  = '8000'
 KEY = "car"
-DB_URL = "mongodb+srv://sumit:rentthecar@cluster0.rj2jhd9.mongodb.net/new"
-# DB_URL = "mongodb://0.0.0.0:27017/data"
+# DB_URL = "mongodb+srv://sumit:rentthecar@cluster0.rj2jhd9.mongodb.net/new"
+DB_URL = "mongodb://0.0.0.0:27017/data"
 password = "xxnf hngs ecch eaek"
 email = "carrent504@gmail.com"
 
